@@ -21,6 +21,7 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -105,6 +106,7 @@ public class AppiumPlugin
 	private static MobileSession thisSession = null;
 	private static ArrayList<String> thisState = null;
 	private static boolean isEasterEggAssigned = false;
+	private static StatsComputer stComputer = null;
 	
 	
 	private String printWidget(Widget widget) {
@@ -469,9 +471,10 @@ public class AppiumPlugin
 				loadCookies();
 			}
 			
-			//TODO: GAMIFICATION caricare lo iniziale dell'app
-			thisState = getAppState();
-			thisSession = new MobileSession(activity_name,thisState, StateController.getTesterName(), true);
+			String mainActivity = package_name + "/" +activity_name;
+			thisState = getAppState(mainActivity);
+			thisSession = new MobileSession(mainActivity ,thisState, StateController.getTesterName(), false);
+			stComputer = StatsComputer.getInstance();
 			thisSession.startSessionTiming();
 		}
 		
@@ -485,6 +488,14 @@ public class AppiumPlugin
 	{
 		thisSession.stopSessionTiming();
 		thisSession.computeTimeSession();
+		
+		if(StateController.getTesterName().length() > 0) {
+			thisSession.getCurrent().getPage().updateHighscore(StateController.getTesterName());
+			GamificationUtils.writeHighScorePage(thisSession.getCurrent().getPage());
+			
+			GamificationUtils.writeNewInteractionInPage(thisSession);
+		}
+
 		
 		if(driver!=null)
 		{
@@ -500,9 +511,22 @@ public class AppiumPlugin
 			driver.quit();
 		}
 		
+		thisSession.updateNewTotalWidget();
 		System.out.println(thisSession.getStringTiming());
 		thisSession.getRoot().printTiming();
-		//GamificationUtils.writeSession(thisSession);
+		GamificationUtils.writeSession(thisSession);
+		
+		
+		Stats currentSessionStats = stComputer.computeStats(thisSession);
+		GamificationUtils.saveStats(stComputer.getStatsMap());
+		System.out.println("Il numero di nuovi widget è: " + thisSession.getTotalNewWidgets());
+		Map<String,String> recap = GamificationUtils.parseStatsForRecap(currentSessionStats);
+		RecapGUI gui = new RecapGUI(recap);
+		
+		
+		/*ArrayList<String> list = thisSession.getPageDiscovered();
+		list.addAll(thisSession.getPageKnown());
+		GamificationUtils.savePages(list, "AndroidPages.txt");*/
 	}
 
 	public void storeHomeState()
@@ -585,10 +609,14 @@ public class AppiumPlugin
 					"cmd.exe", "/c\"", adbPath + "\\adb\" shell input mouse tap " + x + " " + y);
 
 			try {
-				builder.start();
+				Process p = builder.start();
+				System.out.println("Tap performed at x=" + x + ", y= " + y + "con codice " + p.waitFor());
 			} catch (IOException e) {
 				// TODO Auto-generated catch block
 				e.printStackTrace();
+			} catch(InterruptedException e) {
+				System.err.println("Errore nella wait del processo:" + e.getMessage() );
+				System.err.println(e.getStackTrace());
 			}
 		}
 	}
@@ -801,22 +829,68 @@ public class AppiumPlugin
 							StateController.performWidget(locatedWidget);
 						}
 						
+						thisSession.setActiveWidgetCurrentPage(thisSession.getCurrent().getPage().getHighlightedWidgets() +1);
+						
+						boolean isEEAssignable = false;
+						//GAMIFICATION: controllo se ho cliccato sull'easter egg
+						if (locatedWidget.getMetadata("id") != null) {
+							if(thisSession.getCurrent().getPage().getSonWithEasterEgg()!= null)
+								if(thisSession.getCurrent().getPage().getSonWithEasterEgg().equals(locatedWidget.getMetadata("id")))
+									isEEAssignable = true;
+						}
+						
+						thisSession.stopPageTiming();
+						
+						//GamificationUtils.writeNewInteractionInPage(thisSession);
+						
 						//GAMIFICATION: verifica del fragment:
-						ArrayList<String> state = getAppState();
+						ArrayList<String> state = getAppState(thisSession.getMainActivity());
 						plugin.Node current = thisSession.getCurrent(); 
 						plugin.Node n = thisSession.updateState(state);
-						if(n != null) { 
+						if(n != null) {
+							//cambia lo stato, quindi aggiorniamo highscore
+							thisSession.getCurrent().getPage().updateHighscore(StateController.getTesterName());
+							GamificationUtils.writeHighScorePage(thisSession.getCurrent().getPage());
+							//e scriviamo le interazioni nuove
+							GamificationUtils.writeNewInteractionInPage(thisSession);
+							
+							thisSession.setCurrent(n);
+							
 							if(n.equals(current)) {//non era presente, quindi aggiungo il figlio
+								
 								p = (MobilePage) thisSession.newNode(state).getPage();
 								p.setScoutState(StateController.getCurrentState());
-							} else {
+								if(thisSession.getCurrent().getPage().getEasterEggStartPoint() == null && isEEAssignable) {
+									thisSession.getCurrent().getPage().setHasEasterEgg(true);
+									int width=StateController.getProductViewWidth();
+								  	int height=StateController.getProductViewHeight();
+								  	int x =  (int)(Math.random() * (width - 30));
+								  	int y =  (int)(Math.random() * (height - 50));
+								  	thisSession.getCurrent().getPage().setEasterEggStartPoint(x, y);
+								}
+								
+								System.out.println("Ho creato in nuovo nodo con stato: " + p.getState());
+								
+							} else {//ho ripescato uno stato precedente
 								MobilePage mp = (MobilePage) n.getPage();
 								if(mp != null)
 									StateController.setCurrentState(mp.getScoutState());
+								
+								//thisSession.setActiveWidgetCurrentPage(mp.getScoutState().getNonHiddenWidgets().size());
+								thisSession.reloadMap();
+								System.out.println("Ho ripescato il nodo con stato: " + p.getState());
 							}
+							
+							thisState = state;
 						} else {
+							// lo stato è rimasto invariato
 							StateController.setCurrentState(prima);
+							System.out.println("Lo stato è rimasto lo stesso: " + p.getState());
 						}
+						
+						thisSession.startPageTiming();
+						
+						//thisState = state;
 						
 					}
 					
@@ -854,7 +928,7 @@ public class AppiumPlugin
 					}
 	
 					//GAMIFICATION: record interaction in this page
-					thisSession.newInteraction(GamificationUtils.logInformationAndroid(locatedWidget));
+					thisSession.newInteraction(GamificationUtils.logInformationAndroid(locatedWidget));					
 				}
 				
 				
@@ -1170,6 +1244,9 @@ public class AppiumPlugin
 			  	if(!isEasterEggAssigned && thisSession.getCurrent().getPage().getSonWithEasterEgg() == null) {
 			  		//l'easter egg è assegnato ad un widget cliccabile e con un id non nullo
 			  		List<String> eggable = l.stream()
+			  				/*.filter( w -> isClickableWidgetAppium(w))
+			  				.map( w -> w.getMetadata("id").toString())
+			  				.collect(Collectors.toList());*/
 			  				.filter(w -> w.getWidgetType() == WidgetType.ACTION)
 			  				.filter(w -> w.getWidgetSubtype() == WidgetSubtype.LEFT_CLICK_ACTION && w.getMetadata("id") != null)
 			  				.map( w -> w.getMetadata("id").toString())
@@ -1753,26 +1830,42 @@ public class AppiumPlugin
 	}
 	
 
-	public ArrayList<String> getAppState(){
+	public ArrayList<String> getAppState(String activity){
 		try {
-			Process p = Runtime.getRuntime().exec("adb shell dumpsys activity top");// | grep \"Active Fragments\"");//("ping www.wikipedia.org");//
+			Process p = Runtime.getRuntime().exec("adb shell dumpsys activity " + activity.split("/")[0].trim());
+			/*ProcessBuilder builder = new ProcessBuilder(
+					"cmd.exe", "/c", " "adb shell dumpsys activity top");
+			Process p= builder.start();*/
 			InputStream is = p.getInputStream();
 			BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(is));
 	        String line, buf = "";
 	        while ((line = bufferedReader.readLine()) != null) {
 	            buf += line + System.lineSeparator();
 	        }
-	        ArrayList<String> state = GamificationUtils.parseOutputForFragment(buf, package_name + "/" +activity_name);
+	        String act = GamificationUtils.parseOutputForaActivity(buf);
+	        
+	        ArrayList<String> state = GamificationUtils.parseOutputForFragment(buf, activity);
 	        is.close();
+	        
+	        if(act.length() > 0) 
+	        	state.add(0,act);
+	        else
+	        	System.out.println("Impossibile trovare il nome della Activity");
 	        
 	        bufferedReader = new BufferedReader(new InputStreamReader(p.getErrorStream()));
 	        while ((line = bufferedReader.readLine()) != null) {
 	            System.out.println(line);
 	        }
 	        bufferedReader.close();
+	        System.out.println("il processo è terminato con " +p.waitFor());
+	        System.out.println("Lo stato attuale è: " + state);
 	        return state;
 		} catch(IOException e) {
 			System.err.println("Errore nella ricerca del fragment:" + e.getMessage() );
+			System.err.println(e.getStackTrace());
+			return null;
+		} catch(InterruptedException e) {
+			System.err.println("Errore nella wait del processo:" + e.getMessage() );
 			System.err.println(e.getStackTrace());
 			return null;
 		}
